--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,17 @@
 spring:
   application:
-  name: TechnologyConference
+    name: TechnologyConference
+  datasource:
+    url: jdbc:postgresql://localhost:5432/technology_conference
+    username: postgres
+    password: admin
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: create-drop
+      format_sql: true
+  flyway:
+    enabled: true
+  locations:
+    classpath: db/migration
